add/remove friend added
